--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -75,7 +75,7 @@ jobs:
       run: |
         cd /opt/dl
         
-        wget  https://github.com/mingxiaoyu/N1Openwrt/releases/download/$version/openwrt-armvirt-64-default-rootfs.tar.gz
+        wget  https://github.com/mingxiaoyu/N1Openwrt/releases/download/20210124/openwrt-armvirt-64-default-rootfs.tar.gz
 
         curl -L -c cookies.txt 'https://docs.google.com/uc?export=download&id='$FLIPPY_FILEID  |  sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\1/p' > confirm.txt
 
